<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/black"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <TextView
        android:id="@+id/robber_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10dp"
        android:layout_alignParentTop="true"
        android:text="@string/robber_language"
        android:textColor="@android:color/white" />

    <Button
        android:id="@+id/translate_to_button"
        style="@style/CustomButton"
        android:layout_below="@id/robber_title"
        android:onClick="translateTo"
        android:text="@string/translate_to" />

    <Button
        android:id="@+id/translate_from_button"
        style="@style/CustomButton"
        android:layout_below="@id/translate_to_button"
        android:onClick="translateFrom"
        android:text="@string/translate_from" />

    <Button
        android:id="@+id/about_button"
        style="@style/CustomButton"
        android:layout_below="@id/translate_from_button"
        android:onClick="about"
        android:text="@string/about" />

    <Button
        android:id="@+id/quit_button"
        style="@style/CustomButton"
        android:layout_below="@id/about_button"
        android:onClick="quit"
        android:text="@string/quit" />

</RelativeLayout>