<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".TranslateFromActivity" >

    <TextView
        android:id="@+id/translate_from_title"
        style="@style/TextView.Small"
        android:layout_alignParentTop="true"
        android:text="@string/text_to_retranslate" />

    <EditText
        android:id="@+id/retranslate_text"
        style="@style/EditText.Small"
        android:layout_below="@id/translate_from_title"
        android:hint="@string/text_to_be_retranslated" />

    <Button
        android:id="@+id/retranslate_button"
        style="@style/Button.Small"
        android:layout_below="@id/retranslate_text"
        android:onClick="retranslateText"
        android:text="@string/retranslate" />

    <TextView
        android:id="@+id/retranslated_title"
        style="@style/TextView.Small"
        android:layout_below="@id/retranslate_button"
        android:text="@string/retranslated_text" />

    <EditText
        android:id="@+id/retranslated_text"
        style="@style/EditText.Large"
        android:layout_below="@id/retranslated_title" />

</RelativeLayout>