<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" >

    <TextView
        android:id="@+id/translate_title"
        style="@style/TextView.Small"
        android:layout_alignParentTop="true"
        android:text="@string/text_to_translate" />

    <EditText
        android:id="@+id/translate_text"
        style="@style/EditText.Small"
        android:layout_below="@id/translate_title"
        android:hint="@string/text_to_be_translated" />

    <Button
        android:id="@+id/translate_button"
        style="@style/Button.Small"
        android:layout_below="@id/translate_text"
        android:onClick="translateText"
        android:text="@string/translate" />

    <TextView
        android:id="@+id/translated_title"
        style="@style/TextView.Small"
        android:layout_below="@id/translate_button"
        android:text="@string/translated_text" />

    <EditText
        android:id="@+id/translated_text"
        style="@style/EditText.Large"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@id/translated_title"
        android:scrollbars="vertical" />

</RelativeLayout>